--- a/lab_sac4.ipynb
+++ b/lab_sac4.ipynb
@@ -510,6 +510,15 @@
     }
    ],
    "source": [
+    "(* sols = Solve[f'[x] == 0, x] *)\n",
+    "(* \n",
+    "    Wolfram не взял производную от модуля, оставив его не в посчитанном виде Abs'[...] \n",
+    "    применяем любое эквивалентное преобразование\n",
+    "    1) RealAbs\n",
+    "    2) Sqrt[z^2] \n",
+    "*)\n",
+    "\n",
+    "f[y_] := Sqrt[RealAbs[3*x^3 + 2*x^2 - 10*x]] / (4*x)\n",
     "sols = Solve[f'[x] == 0, x]"
    ]
   },
@@ -517,7 +526,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Нельзя найти решение аналитически."
+    "Решения нет"
    ]
   },
   {
